# fly_in

./: .gitignore  Makefile  README.md  pyproject.toml
src/fly_in/: __init__.py  main.py  map.py  map_categorizer.py  map_parser.py  map_types.py  output.py  simulation.py  visualizer.py
tests/: test_map_parser.py
