[project]
name = "fly-in"
version = "0.1.0"
description = """System that efficiently routes a fleet of drones from a central
base (start) to a target location (end), while navigating this dynamic network under
a set of strict constraints and optimization goals."""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pygame>=2.6.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fly_in"]

[tool.ruff]
exclude = ["tests/*", "tests/*"]

[tool.ruff.lint]
select = ["E", "F", "D"] 
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "pep257"
